--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
     <header class="header maxWidth">
-        <img src="..\Desafio10\imagens10\logo.jpg" alt="" class="header_logo">
+        <img src=".\imagens10\logo.jpg" alt="" class="header_logo">
         <nav class="header_nav">
             <ul>
                 <li>
@@ -105,7 +105,7 @@
         <section class="main_content">
             <div class="maxWidth row">
                 <article class="col col-12 col-6">
-                    <img src="..\Desafio10\imagens10\imagem01.jpg" alt="" class="icon_img">
+                    <img src=".\imagens10\imagem01.jpg" alt="" class="icon_img">
                     <h2 class="main_content_title">Os Dois Mundos</h2>
                     <p>
                         O filme conta a história de uma sereia princesa de dezesseis anos, chmada Ariel a filha mais
@@ -125,7 +125,7 @@
                 </article>
 
                 <article class="col col-12 col-6">
-                    <img src="..\Desafio10\imagens10\imagem02.jpg" alt="" class="icon_img">
+                    <img src=".\imagens10\imagem02.jpg" alt="" class="icon_img">
                     <h2 class="main_content_title">O Naufrágio</h2>
                     <p>
                         No entanto, ela é sempre proibida por seu pai de ir a superficie da terra por considerar os
@@ -143,7 +143,7 @@
                 </article>
 
                 <article class="col col-12 col-6">
-                    <img src="..\Desafio10\imagens10\imagem03.jpg" alt="" class="icon_img">
+                    <img src=".\imagens10\imagem03.jpg" alt="" class="icon_img">
                     <h2 class="main_content_title">O Acordo</h2>
                     <p>
                         Ariel para ficar com o principe tomará uma atitude que mudará sua vida: um acordo com a bruxa do
@@ -162,7 +162,7 @@
                 </article>
 
                 <article class="col col-12 col-6">
-                    <img src="..\Desafio10\imagens10\imagem04.jpg" alt="" class="icon_img">
+                    <img src=".\imagens10\imagem04.jpg" alt="" class="icon_img">
                     <h2 class="main_content_title">A Maldade</h2>
                     <p>
                         Eric leva Ariel para o palácio e começa a ensiná-la sobre a vida na terra. Eles se tornam amigos
@@ -181,7 +181,7 @@
 
                 </article>
                 <article class="col col-12 col-6">
-                    <img src="..\Desafio10\imagens10\imagem05.jpg" alt="" class="icon_img">
+                    <img src=".\imagens10\imagem05.jpg" alt="" class="icon_img">
                     <h2 class="main_content_title">Felizes Para Sempre</h2>
                     <p>
                         Úrsula usa a voz de Ariel para encantar Eric, que a reconhece como a pessoa que o salvou do
